# unixcrypt-breaker-multi

./: README.md
coincidences/: dists.c  dists2.c
mpf/: test1.c
old/: Makefile  gen_std_blocks.c  get_actual_wires.c
presentation/: present1.tex
rho_pi/: Makefile  convert.sh  convert_rhopi.sh  correct_guesses.c  rhopi_to_tausigma.c  rhopi_wires_to_sigma.sh
rho_pi/later/: get_data.sh  get_sigmahat_i.sh
sigma/: Makefile  README  conjs_test.sh  get_sigma.sh  run_test.sh  true_sigma  true_sigma.c  wires_complete.txt
sigma/garbaage/: conjs_to_sigma.c  get_conjs.c
sigma/split/: get_conjugate.c  pick_majority.c
sigma_tau/: decryptor.c
tau/K/: Makefile  list.c  list.h  sigmas_to_tau.c  sigmas_to_tau.c.bak
tau/K/test/: test.c
tau/multi/: README  get_results.sh  kill.sh  proc.sh  proc.sh.bak  run.sh  status.sh  tau.real
tau/tau_agg/: Makefile  dist_renormalizer.c  dist_renormalizer.c.bak  gen_data.sh  get_tau.sh  get_tau.sh.todo  get_tau_cust.sh  mult.tau  nulldist.csv  nulldist2.csv  nulldist3.csv  nulldist4.csv  renormalize.sh  tau_table_picker.c  tau_table_picker.c.1  use_data.sh  use_data_renorm.sh  use_renormed.sh  wires_to_tau.c
tau/tau_agg/test/: float.c  test.sh
unixcrypt-edited/: ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  config.h  config.status  configure  configure.ac
unixcrypt-edited/doc/: Makefile  Makefile.am  Makefile.in  man2html.sed  unixcrypt-breaker.1  unixcrypt-breaker.1.in
unixcrypt-edited/src/: Makefile  Makefile.am  Makefile.in  block.c  block.h  stats.c  stats.h  unixcrypt-breaker.c
writeup/: Draft1.tex  Draft2.tex
